[package]
name = "x3dh-ke"
version = "0.1.1"
edition = "2018"
authors = ["Hannes Furmans"]
license = "MIT"
description = "Implementation of X3DH"
homepage = "https://github.com/Decentrailzed-Communication-System/x3dh-ke"
repository = "https://github.com/Decentrailzed-Communication-System/x3dh-ke"
readme = "README.md"
keywords = ["signal", "crypto", "cryptographie", "x3dh"]
documentation = "https://docs.rs/x3dh-ke/0.1.0/x3dh_ke/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = {version = "0.6.2", features = ["getrandom"]}
p256 = {version = "0.8.1", features = ["zeroize", "ecdsa", "ecdh", "arithmetic", "pem"]}
hkdf = "0.11.0"
sha2 = "0.9.5"
serde = {version = "1.0.126", optional = true}
bincode = {version = "1.3.3", optional = true}
serde_bytes = {version = "0.11.5", optional = true}

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "x3dh_bench"
harness = false

[features]
default = ["bytes"]
bytes = ["serde/derive", "serde", "bincode", "serde_bytes"]