[package]
name = "x3dh-ke"
version = "0.1.5"
edition = "2018"
authors = ["Hannes Furmans"]
license = "MIT"
description = "Implementation of X3DH"
homepage = "https://github.com/Decentrailzed-Communication-System/x3dh-ke"
repository = "https://github.com/Decentrailzed-Communication-System/x3dh-ke"
readme = "README.md"
keywords = ["signal", "crypto", "cryptographie", "x3dh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
 maintenance = { status = "actively-developed" }

[dependencies]
rand_core = {version = "0.6.2"}
getrandom = "0.2.3"
p256 = {version = "0.9.0", features = ["zeroize", "ecdsa", "ecdh", "arithmetic", "pem"]}
base64ct = "1.1.1"
hkdf = "0.12.2"
sha2 = "0.9.5"
serde = {version = "1.0.126", optional = true}
bincode = {version = "1.3.3", optional = true}
serde_bytes = {version = "0.11.5", optional = true}
const-oid = "0.6.2"

[dev-dependencies]
crossbeam-deque = "0.8.1"
crossbeam-epoch = "0.9.5"
criterion = "0.3.5"

[[bench]]
name = "x3dh_bench"
harness = false

[features]
default = ["bytes"]
bytes = ["serde/derive", "serde", "bincode", "serde_bytes"]
wasm = ["getrandom/js"]